--- a/styles.css
+++ b/styles.css
@@ -766,7 +766,7 @@ html,body
 .team__text h1{
     margin-top: 2rem;
     margin-bottom: 1rem;
-    font-size: 3rem;
+    font-size: clamp(1.5rem, 6vw, 4rem);
 }
 .team__text h2{
     padding: 1rem 1rem;
