--- a/styles.css
+++ b/styles.css
@@ -334,6 +334,7 @@ html,body
 .hero{
     background: linear-gradient(to right, rgba(7, 42, 108, 0.8), rgba(0,0,0, 0.2)),
     url('./images/DF3.png');
+    background-repeat: no-repeat;
     height: 100vh;
     background-position: center;
     background-size: contain;
