--- a/styles.css
+++ b/styles.css
@@ -858,6 +858,12 @@ html,body
     grid-row: 4/5;
     grid-column: 1/2;
 }
+.Review{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .Review__holder{
     width: 80vw;
     display: flex;
